crates/mwe-core/src/snapshots/mwe_core__render__tests__snapshot_carol_outsider.snap
---
source: crates/mwe-core/src/render.rs
expression: out.text
---
# Controller API edit-composition


Endpoint del Widget Pro che gestisce l'edit di una composition utente.


[redacted]

[redacted]
